add check_pread_log function to json_util

--- a/pipeline/lib/dune
+++ b/pipeline/lib/dune
@@ -3,4 +3,4 @@
  (public_name pipeline)
  (libraries current current.fs current_docker current_git current_github
    current_slack current_web dockerfile fmt.tty logs logs.fmt prometheus
-   rresult uri curly postgresql yojson str))
+   rresult uri curly postgresql yojson str pcre))
